--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   flutter_svg: ^2.0.7
   fluttertoast: ^8.2.1
   intl_phone_field: ^3.2.0
+  dropdown_button2: ^2.3.9
+  image_picker: ^1.0.7
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
