--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   dropdown_button2: ^2.3.9
   image_picker: ^1.0.7
   intl: ^0.19.0
+  drift: ^2.16.0
+  build_runner: ^2.4.8
 
 dev_dependencies:
   flutter_test:
