--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,9 @@ dependencies:
   image_picker: ^1.0.7
   intl: ^0.19.0
   drift: ^2.16.0
-  build_runner: ^2.4.8
+  path_provider: ^2.1.2  # For finding the correct path to store the database
+  path: ^1.9.0
+  sqlite3_flutter_libs: ^0.5.20
 
 dev_dependencies:
   flutter_test:
@@ -60,10 +62,9 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
-
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
+  flutter_lints: ^3.0.1
+  drift_dev: ^2.16.0
+  build_runner: ^2.4.8
 
 # The following section is specific to Flutter packages.
 flutter:
